--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,10 @@ jobs:
         msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:TargetFramework=net8.0-windows ${{env.SOLUTION_FILE_PATH}}
         ls
         pwd
+        echo GITHUB_WORKSPACE= ${{env.GITHUB_WORKSPACE}}
+        echo listing dir for WORKSPACE
+        ls ${{GITHUB_WORKSPACE}}
+        ls ${{GITHUB_WORKSPACE}}/bin/
         
     - name: release
       uses: softprops/action-gh-release@v2
