--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,12 +38,14 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: |
         msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:TargetFramework=net8.0-windows ${{env.SOLUTION_FILE_PATH}}
+        echo "[DEBUG] listing current directory:"
         ls
+        echo "[DEBUG] listing /bin:"
+        ls /bin/
+        echo "[DEBUG] printing current working dir:"
         pwd
-        echo GITHUB_WORKSPACE= ${{env.GITHUB_WORKSPACE}}
-        echo listing dir for WORKSPACE
-        ls ${{env.GITHUB_WORKSPACE}}
-        ls ${{env.GITHUB_WORKSPACE}}/bin/
+        
+        
         
     - name: release
       uses: softprops/action-gh-release@v2
