--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,8 @@ jobs:
         msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:TargetFramework=net8.0-windows ${{env.SOLUTION_FILE_PATH}}
         echo "[DEBUG] listing current directory:"
         ls
-        echo "[DEBUG] listing /bin:"
-        ls /bin/
+        echo "[DEBUG] listing bin/:"
+        ls bin/
         echo "[DEBUG] printing current working dir:"
         pwd
         
