--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,10 +38,13 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: |
         msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:TargetFramework=net8.0-windows ${{env.SOLUTION_FILE_PATH}}
+        echo "[DEBUG] showing github.ref: ${{ github.ref }}"
         echo "[DEBUG] listing current directory:"
         ls
         echo "[DEBUG] listing bin/:"
         ls bin/
+        echo "[DEBUG] listing bin/Release"
+        ls bin/Release
         echo "[DEBUG] printing current working dir:"
         pwd
         
