--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,12 +32,22 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: nuget restore ${{env.SOLUTION_FILE_PATH}}
 
+    - name: Get Current Tag
+      id: get_tag
+      run: |
+        echo "[DEBUG] Test pulling out tag name and cutting to be using in zip name"
+        echo "TAG_NAME=${{github.ref}}.split('/')[2]" >> "$GITHUB_ENV"
+        echo "[DEBUG] Test tag name in env var"
+        echo "[DEBUG] env.TAG_NAME: ${{env.TAG_NAME}}"
+    
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: |
         msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:TargetFramework=net8.0-windows ${{env.SOLUTION_FILE_PATH}}
+        echo "[INFO] Zipping build dir..."
+        Compress-Archive -Path /bin/Release/net8.0-windows -DestinationPath ./release-${{env.TAG_NAME}}.zip
         echo "[DEBUG] showing github.ref: ${{ github.ref }}"
         echo "[DEBUG] listing current directory:"
         ls
@@ -48,9 +58,10 @@ jobs:
         
         
         
+        
     - name: release
       uses: softprops/action-gh-release@v2
       with:
         files: |
-          ${{env.GITHUB_WORKSPACE}}/bin/${{env.BUILD_CONFIGURATION}}/release-${{ github.ref }}.zip
+          release-${{ github.ref }}.zip
   
