--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,7 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: |
         msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:TargetFramework=net8.0-windows ${{env.SOLUTION_FILE_PATH}}
+        echo "[DEBUG] Check the env var TAG_NAME from the last step: ${{ env.TAG_NAME }}"
         echo "[INFO] Zipping build dir..."
         Compress-Archive -Path bin/Release/net8.0-windows -DestinationPath ./release-${{env.TAG_NAME}}.zip
         echo "[DEBUG] showing github.ref: ${{ github.ref }}"
