--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,8 @@ jobs:
         echo "[DEBUG] Check the REF_NAME: ${{ github.ref_name }}"
         echo "[INFO] Zipping build dir..."
         Compress-Archive -Path bin/Release/net8.0-windows -DestinationPath ./release-${{github.ref_name}}.zip
+        ls
+        ls bin/release/net8.0-windows
         
     - name: release
       uses: softprops/action-gh-release@v2
