--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
     - name: release
       uses: softprops/action-gh-release@v2
       with:
+        token: ${{github.token}}
         files: |
           release-${{github.ref_name}}.zip
   
