--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,12 +22,13 @@ jobs:
 
   build:
     runs-on: windows-latest
+
     permissions:
-      contents: write
+        contents: write
 
     steps:
-    - uses: actions/checkout@
-  
+    - uses: actions/checkout@v4
+
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
 
@@ -45,8 +46,8 @@ jobs:
         
     - name: release
       uses: softprops/action-gh-release@v2
-      
       with:
+        token: ${{github.token}}
         files: |
           release-${{github.ref_name}}.zip
   
